<resources>
    <string name="app_name">Note App</string>
    <string name="Notes">My Notes</string>
    <string name="tick">tick</string>
    <string name="add">add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Fab">fab</string>
    <string name="note_titile">Note Title</string>
    <string name="note_description">Enter Note Here</string>
    <string name="note_sub_title">Note Sub Title</string>
    <string name="datetime">datetime</string>
    <string name="delete_note">Delete Note</string>
    <string name="add_web_link">Add Web Link</string>
    <string name="add_image">Add Image</string>
    <string name="pick_color">Pick Color</string>
    <string name="todo">TODO</string>
    <string name="web_url">Enter Web Url</string>
    <string name="http">http://</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="titleblank">Note Title is Blank</string>
    <string name="subtitleblank">Note Sub Title is Blank</string>
    <string name="descblank">Note Description is Blank</string>
    <string name="urlblank">Url is Blank</string>
    <string name="titleempty">Note Title is Required</string>
    <string name="subtitleempty">Note Sub Title is Required</string>
    <string name="descempty">Note Description is Required</string>
    <string name="urlempty">Url is Required</string>
    <string name="urlnotvalid">Url is not valid</string>
    <string name="delete">Delete?</string>
    <string name="deleteBtn">Delete</string>
    <string name="areyoursure">Are you sure want to delete this Note?</string>
    <string name="deleteimg">Are you sure want to delete this Image?</string>
    <string name="deleteNote">Success Delete Note</string>
    <string name="search">Search ...</string>
    <string name="success">Success</string>
    <string name="success_add_note">Success Add Note</string>
    <string name="update">Update</string>
    <string name="update_add_note">Success Update Note</string>
</resources>