<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/darkBlack"
    tools:context=".view.fragment.HomeFragment">

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_15sdp"
        android:text="@string/Notes"
        android:paddingStart="@dimen/_10sdp"
        android:paddingTop="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/poppins"
        android:textColor="@color/white"/>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:searchIcon="@drawable/ic_baseline_search_24"
        android:background="@drawable/bg_search"
        android:queryHint="@string/search"
        android:theme="@style/ThemeOverlay.search"
        android:iconifiedByDefault="false"
        app:layout_constraintTop_toBottomOf="@id/tv1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/search_view"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/search_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/recycler_view"/>

<!--    <LinearLayout-->
<!--        android:id="@+id/l1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:background="@color/colorPrimary"-->
<!--        android:padding="@dimen/_10sdp"-->
<!--        android:visibility="invisible"-->
<!--        android:orientation="horizontal">-->

<!--        <ImageView-->
<!--            android:layout_width="@dimen/_24sdp"-->
<!--            android:layout_height="@dimen/_24sdp"-->
<!--            android:src="@drawable/ic_tick"-->
<!--            app:tint="@color/white"-->
<!--            android:contentDescription="@string/tick" />-->

<!--        <ImageView-->
<!--            android:layout_width="@dimen/_24sdp"-->
<!--            android:layout_height="@dimen/_24sdp"-->
<!--            android:src="@drawable/ic_image"-->
<!--            android:layout_marginStart="@dimen/_10sdp"-->
<!--            android:layout_marginEnd="@dimen/_10sdp"-->
<!--            android:contentDescription="@string/tick"-->
<!--            app:tint="@color/white" />-->

<!--        <ImageView-->
<!--            android:layout_width="@dimen/_24sdp"-->
<!--            android:layout_height="@dimen/_24sdp"-->
<!--            android:src="@drawable/ic_link"-->
<!--            android:contentDescription="@string/tick"-->
<!--            app:tint="@color/white" />-->


<!--    </LinearLayout>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:id="@+id/fabBtnCreateNote"
        android:tint="@color/white"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="@string/Fab" />

</androidx.constraintlayout.widget.ConstraintLayout>