<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlack"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.CreateNoteFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/topbar"
        android:layout_gravity="top"
        android:foregroundGravity="top"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_gravity="start"
            app:tint="@color/white" />

        <ImageView
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_check"
            android:layout_gravity="end"
            app:tint="@color/white"
            />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_50sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_title_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/note_titile"
                android:textColor="@color/white"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:inputType="text"
                android:textColorHint="@color/gray"
                android:fontFamily="@font/quicksand"
                android:textStyle="bold"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/_15sdp"/>

            <TextView
                android:id="@+id/tv_datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/et_title_note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:ellipsize="end"
                android:paddingStart="@dimen/_10sdp"
                android:textColor="@color/gray"
                android:fontFamily="@font/quicksand"
                android:textSize="@dimen/_10sdp"
                android:maxLines="1"/>

            <LinearLayout
                android:id="@+id/note_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/tv_datetime"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent">

                <View
                    android:id="@+id/colorView"
                    android:layout_width="@dimen/_5sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@color/bluePrimary"/>

                <EditText
                    android:id="@+id/et_sub_title_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:hint="@string/note_sub_title"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:background="@null"
                    android:textColorHint="@color/gray"
                    android:fontFamily="@font/quicksand"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textSize="@dimen/_12sdp"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layoutImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/note_sub">

                <com.github.florent37.shapeofview.shapes.RoundRectView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    app:shape_roundRect_bottomLeftRadius="10dp"
                    app:shape_roundRect_bottomRightRadius="10dp"
                    app:shape_roundRect_topLeftRadius="10dp"
                    app:shape_roundRect_topRightRadius="10dp"
                    android:visibility="visible"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/imgNote"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_300sdp"
                        android:scaleType="fitXY"
                        android:visibility="visible" />

                </com.github.florent37.shapeofview.shapes.RoundRectView>

                <ImageView
                    android:id="@+id/imgDelete"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_alignParentEnd="true"
                    android:visibility="gone"
                    android:elevation="@dimen/_5sdp"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/ic_baseline_delete_outline_24" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutWebUrl"
                android:background="@drawable/bg_layout_weblink"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/_10sdp"
                android:visibility="gone"
                android:layout_margin="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutImage"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/etWebLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:fontFamily="@font/quicksand"
                        android:hint="@string/web_url"
                        android:inputType="textMultiLine"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/gray"
                        android:textSize="@dimen/_12sdp" />
                    <ImageView
                        android:id="@+id/imgUrlDelete"
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:visibility="visible"
                        android:src="@drawable/ic_baseline_cancel_24"
                        app:tint="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:fontFamily="@font/quicksand"
                        android:background="@drawable/btn_dark"
                        android:text="@string/cancel"
                        android:textSize="@dimen/_12sdp"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:id="@+id/btnCancel"/>

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"
                        android:fontFamily="@font/quicksand"
                        android:background="@drawable/btn_dark"
                        android:text="@string/ok"
                        android:textAllCaps="false"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:textColor="@color/white"
                        android:id="@+id/btnOk"/>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:ellipsize="end"
                android:visibility="gone"
                android:fontFamily="@font/quicksand"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/lightBlue"
                android:textSize="@dimen/_12sdp"
                android:autoLink="web"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />

            <EditText
                android:id="@+id/et_note_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvWebLink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/note_description"
                android:textColor="@color/white"
                android:background="@null"
                android:inputType="textMultiLine"
                android:textColorHint="@color/gray"
                android:fontFamily="@font/quicksand"
                android:textSize="@dimen/_12sdp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="bottom"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/btnMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_gravity="center"
            android:src="@drawable/img_bar"
            app:tint="@color/white" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>